--- a/css/scsl.css
+++ b/css/scsl.css
@@ -548,7 +548,7 @@ div.unread-mentions-indicator-bottom {
     background: rgba(58, 113, 193, 0.15) !important;
 }
 
-.wrapper-1Rf91z{width: 65px;}
+/* .wrapper-1Rf91z{width: 65px;} */
 .wrapper-1Rf91z .scroller-wrap{width: 150px;}
 .wrapper-1Rf91z .scroller-2TZvBN {
     display: flex;
@@ -1104,9 +1104,9 @@ div.unread-mentions-indicator-bottom {
     border-color: rgba(0, 0, 0, 0);
 }
 
-.scrollerWrap-1IAIlv {
+/* .scrollerWrap-1IAIlv {
     width: 75px;
-}
+} */
 
 .theme-dark .container-3gCOGc {
     background-color: var(--main-transparency);
@@ -1729,4 +1729,16 @@ body>div:last-of-type {
 .theme-dark .member-3W1lQa:hover {
     background-color: rgba(79,84,92,0.4);
     color: #fff;
+}
+
+.app-2rEoOp {
+    background-color: var(--background-image);
+}
+
+.platform-win .sidebar-2K8pFh {
+    background-color: var(--main-transparency);
+}
+
+.privateChannels-1nO12o {
+    background-color: rgba(0,0,0,0);
 }
