--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1742,3 +1742,7 @@ body>div:last-of-type {
 .privateChannels-1nO12o {
     background-color: rgba(0,0,0,0);
 }
+
+.panels-j1Uci_ {
+    background-color: rgba(0,0,0,0);
+}
