--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1746,3 +1746,7 @@ body>div:last-of-type {
 .panels-j1Uci_ {
     background-color: rgba(0,0,0,0);
 }
+
+.name-IbjUBS {
+    color: var(--main-color);
+}
