--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1750,3 +1750,8 @@ body>div:last-of-type {
 .name-IbjUBS {
     color: var(--main-color);
 }
+
+.wrapper-CU3qI5.muted-1NRuDm:hover .icon-WnO6o2, .wrapper-CU3qI5.muted-1NRuDm:hover .name-IbjUBS, .wrapper-CU3qI5:hover .icon-WnO6o2, .wrapper-CU3qI5:hover .name-IbjUBS {
+    color: var(--main-color);
+    filter: brightness(150%);
+}
