Fixed sidebar border

--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1775,3 +1775,7 @@ body>div:last-of-type {
 .item-2hkk8m:not([style *= "opacity: 0.7"]) {
     border-color: transparent;
 }
+
+.sidebar-2K8pFh {
+    border-radius: 0 !important;
+}
