--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1755,3 +1755,7 @@ body>div:last-of-type {
     color: var(--main-color);
     filter: brightness(150%);
 }
+
+.sidebar-2K8pFh {
+    border-radius: 0 !important;
+}
