--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -1773,4 +1773,11 @@ body>div:last-of-type {
 
 .sidebar-2K8pFh {
     border-radius: 0 !important;
+    background-color: var(--main-transparency);
+}
+
+.typeMacOS-3EmCyP {
+    position: absolute;
+    width: 72px;
+    padding-right: 112px;
 }
