Fix transparency issue on MacOS

--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1758,4 +1758,5 @@ body>div:last-of-type {
 
 .sidebar-2K8pFh {
     border-radius: 0 !important;
+    background-color: var(--main-transparency);
 }
