friends-icon new class scope

--- a/css/scsl.css
+++ b/css/scsl.css
@@ -766,7 +766,7 @@ div.unread-mentions-indicator-bottom {
     border-radius: 25px;
 }
 
-.theme-dark .button-OhfaWu, .theme-light .button-OhfaWu {
+.listItemWrapper-3X98Pc > .wrapper-25eVIn {
     background: var(--friends-icon) !important;
     background-position: var(--friends-icon-position) !important;
     background-repeat: no-repeat !important;
@@ -1759,4 +1759,8 @@ body>div:last-of-type {
 .sidebar-2K8pFh {
     border-radius: 0 !important;
     background-color: var(--main-transparency);
+}
+
+.listItemWrapper-3X98Pc > .wrapper-25eVIn > svg {
+    opacity: 0;
 }
