--- a/css/scsl.css
+++ b/css/scsl.css
@@ -766,7 +766,7 @@ div.unread-mentions-indicator-bottom {
     border-radius: 25px;
 }
 
-.listItemWrapper-3X98Pc > .wrapper-25eVIn {
+.listItem-2P_4kh > .listItemWrapper-3X98Pc > .wrapper-25eVIn {
     background: var(--friends-icon) !important;
     background-position: var(--friends-icon-position) !important;
     background-repeat: no-repeat !important;
