--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1762,6 +1762,6 @@ body>div:last-of-type {
     background-color: var(--main-transparency);
 }
 
-.scroller-2FKFPG > .listItem-2P_4kh:not(:first-child) > .listItemWrapper-3X98Pc > .wrapper-25eVIn > svg {
+.scroller-2FKFPG > .listItem-2P_4kh:first-child > .listItemWrapper-3X98Pc > .wrapper-25eVIn > svg {
     opacity: 0;
 }
