--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1765,3 +1765,7 @@ body>div:last-of-type {
 .scroller-2FKFPG > .listItem-2P_4kh:first-child > .listItemWrapper-3X98Pc > .wrapper-25eVIn > svg {
     opacity: 0;
 }
+
+.base-3dtUhz {
+    left: 72px;
+}
