--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1769,3 +1769,31 @@ body>div:last-of-type {
 .base-3dtUhz {
     left: 72px;
 }
+
+.scroller-2TZvBN {
+    background-color: transparent;
+}
+
+.messages-3amgkR {
+    background-color: transparent;
+}
+
+.scroller-1JbKMe {
+    background-color: transparent;
+}
+
+.scroller-1IIF0A {
+    background-color: transparent;
+}
+
+.friendsTable-133bsv .friendsTableBody-1ZhKif {
+    background-color: transparent;
+}
+
+.sidebarRegionScroller-3MXcoP {
+    background: transparent;
+}
+
+.contentRegionScroller-26nc1e {
+    background-color: transparent;
+}
