--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1819,3 +1819,7 @@ body>div:last-of-type {
 .theme-dark .bodyInner-245q0L, .theme-dark .footer-1fjuF6 {
     background-color: transparent;
 }
+
+.scroller-305q3I {
+    background-color: transparent;
+}
