--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -1810,3 +1810,7 @@ body>div:last-of-type {
 .theme-dark .bodyInner-245q0L, .theme-dark .footer-1fjuF6 {
     background-color: transparent;
 }
+
+.scroller-305q3I {
+    background-color: transparent;
+}
