--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1801,3 +1801,7 @@ body>div:last-of-type {
 .theme-dark .bodyInner-245q0L, .theme-dark .footer-1fjuF6 {
     background-color: transparent;
 }
+
+.scroller-305q3I {
+    background-color: transparent;
+}
