--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -1818,3 +1818,7 @@ body>div:last-of-type {
 .theme-dark .bodyInner-245q0L, .theme-dark .footer-1fjuF6 {
     background-color: transparent;
 }
+
+.scroller-305q3I {
+    background-color: transparent;
+}
