Fix issue with transparency on canary

--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -1814,3 +1814,7 @@ body>div:last-of-type {
 .scroller-305q3I {
     background-color: transparent;
 }
+
+.bg-h5JY_x {
+    background-color: transparent;
+}
