--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1823,3 +1823,7 @@ body>div:last-of-type {
 .scroller-305q3I {
     background-color: transparent;
 }
+
+.bg-h5JY_x {
+    background-color: transparent;
+}
