--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -1822,3 +1822,7 @@ body>div:last-of-type {
 .scroller-305q3I {
     background-color: transparent;
 }
+
+.bg-h5JY_x {
+    background-color: transparent;
+}
