fixed server folder unreads

--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -1663,14 +1663,6 @@ padding: 0 !important;
     margin-left: 7px;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN > div:not(.listItem-2P_4kh) > div .item-2hkk8m {
-    opacity: 0 !important;
-}
-
-.wrapper-1Rf91z .scroller-2TZvBN > div:not(.listItem-2P_4kh) > div .wrapper-sa6paO {
-    display: none !important;
-}
-
 .listItem-2P_4kh {
     width: auto;
     margin-left: 9px;
@@ -1825,4 +1817,24 @@ body>div:last-of-type {
 
 .bg-h5JY_x {
     background-color: transparent;
+}
+
+
+.folderIconWrapper-226oVY {
+    background-color: transparent !important;
+}
+
+.folder-21wGz3 {
+    margin-left: -1px;
+    border-radius: 100%;
+}
+
+.expandedGuilds-1JMD4M .listItem-2P_4kh .pill-31IEus {
+    left: -5px;
+    position: absolute;
+    top: -2px;
+}
+
+.expandedGuilds-1JMD4M, .guildIcon-GuAC7C {
+    overflow: visible;
 }
