--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1838,3 +1838,10 @@ body>div:last-of-type {
 .expandedGuilds-1JMD4M, .guildIcon-GuAC7C {
     overflow: visible;
 }
+
+.wrapper-1Rf91z .scroller-2TZvBN > div:not(.listItem-2P_4kh) > div .item-2hkk8m {
+    opacity: 0 !important;
+}
+.wrapper-1Rf91z .scroller-2TZvBN > div:not(.listItem-2P_4kh) > div .wrapper-sa6paO {
+    display: none !important;
+}
