--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -1839,9 +1839,6 @@ body>div:last-of-type {
     overflow: visible;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN > div:not(.listItem-2P_4kh) > div .item-2hkk8m {
-    opacity: 0 !important;
-}
-.wrapper-1Rf91z .scroller-2TZvBN > div:not(.listItem-2P_4kh) > div .wrapper-sa6paO {
-    display: none !important;
+.pill-1m5BUr {
+    display: none;
 }
