--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -1101,7 +1101,7 @@ div.unread-mentions-indicator-bottom {
 }
 
 .theme-dark .scrollerThemed-2oenus.themedWithTrack-q8E3vB .scroller-2FKFPG::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: var(--scroll-bar-color);
     border-color: rgba(0, 0, 0, 0);
 }
 
@@ -1428,7 +1428,7 @@ padding: 0 !important;
 
 .userPopout-3XzG_A {
     box-shadow: none;
-    background: var(--main-transparency);
+    background: var(--user-popup-background);
 }
 
 .bodyTitle-Y0qMQz {
@@ -1785,4 +1785,85 @@ body>div:last-of-type {
 
 .scroller-2FKFPG > .listItem-2P_4kh:first-child > .listItemWrapper-3X98Pc > .wrapper-25eVIn > svg {
     opacity: 0;
+}
+
+.scroller-2TZvBN {
+    background-color: transparent;
+}
+
+.messages-3amgkR {
+    background-color: transparent;
+}
+
+.scroller-1JbKMe {
+    background-color: transparent;
+}
+
+.scroller-1IIF0A {
+    background-color: transparent;
+}
+
+.friendsTable-133bsv .friendsTableBody-1ZhKif {
+    background-color: transparent;
+}
+
+.sidebarRegionScroller-3MXcoP {
+    background: transparent;
+}
+
+.contentRegionScroller-26nc1e {
+    background-color: transparent;
+}
+
+.theme-dark .bodyInner-245q0L, .theme-dark .footer-1fjuF6 {
+    background-color: transparent;
+}
+
+.scroller-305q3I {
+    background-color: transparent;
+}
+
+.bg-h5JY_x {
+    background-color: transparent;
+}
+
+
+.folderIconWrapper-226oVY {
+    background-color: transparent !important;
+}
+
+.folder-21wGz3 {
+    margin-left: -1px;
+    border-radius: 100%;
+}
+
+.expandedGuilds-1JMD4M .listItem-2P_4kh .pill-31IEus {
+    left: -5px;
+    position: absolute;
+    top: -2px;
+}
+
+.expandedGuilds-1JMD4M, .guildIcon-GuAC7C {
+    overflow: visible;
+}
+
+.pill-1m5BUr {
+    display: none;
+}
+
+.item-2hkk8m:not([style *= "height: 8px"]) {
+    border-color: transparent;
+    background-color: transparent;
+}
+
+.clickable-1JJAn8.container-2Pjhx-:hover {
+    background-color: var(--hover-list-bg-color);
+}
+
+.dividerEnabled-2TTlcf {
+    border-bottom-color: var(--border-lines-color);
+}
+
+.modeMuted-3osy7j:hover .name-3_Dsmg, .wrapper-1ucjTd:hover .name-3_Dsmg {
+    color: var(--channel-hover-text-color);
 }
