Fixed the most irritating thing ever
made the server icons in-line

--- a/community/TateNoYuushaFilo/Tate_No_Yuusha_Filo.theme.css
+++ b/community/TateNoYuushaFilo/Tate_No_Yuusha_Filo.theme.css
@@ -291,3 +291,10 @@ border-radius: 8px ;
 }
 
 
+
+/*move server add/create in line*/
+.scroller-2TZvBN>div:nth-last-child(-n+2) {
+	margin-left: 0px ;
+}
+
+
