--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1855,3 +1855,8 @@ body>div:last-of-type {
 .modeMuted-3osy7j:hover .name-3_Dsmg, .wrapper-1ucjTd:hover .name-3_Dsmg {
     color: var(--channel-hover-text-color, var(--text-hover-color));
 }
+
+.embedFull-2tM8-- {
+    border-left: 4px solid var(--main-color);
+    background: rgba(255,255,255,0.04);
+}
