--- a/community/TateNoYuushaFilo/Tate_No_Yuusha_Filo.theme.css
+++ b/community/TateNoYuushaFilo/Tate_No_Yuusha_Filo.theme.css
@@ -86,7 +86,7 @@
     Change the text color of a selected text channel or joined voice channel
     Default: #f6f6f7
     */
-    --selected-text-voice-color: #fae9cf;
+    --selected-text-voice-color: rgb(0, 33, 106);
 
     /*
     Change the text color of a hovered text or voice channel
@@ -117,16 +117,27 @@
 /* ADD ANY CUSTOM CODE BELOW */
 
 		/*on friend click from RHS*/
-/* Role and Note */
+/* Role and Note and playing */
 .bodyTitle-Y0qMQz {
     color: rgb(250, 233, 207);
 }
-
+.theme-dark .activityUserPopout-2yItg2 .headerText-1HLrL7 {
+	color: rgb(250, 233, 207);
+}
 /* Protip */
 .statusGreen-168O6Q {
     color: rgb(250, 233, 207);
 }
-
+/*name and no and status*/
+.headerName-fajvi9 {
+	color: rgb(250, 233, 207) ;
+}
+.nameTag-m8r81H .username-2b1r56 {
+	color:rgba(250, 233, 207,0.8);
+}
+.headerTag-2pZJzA {
+	color:rgba(250, 233, 207,0.5);
+}
 
 
 
@@ -138,7 +149,7 @@
 
 /*mod tabs on right bar*/
 .container-2ax-kl {
-    color: rgba(250, 233, 207, 0.7);
+    color: rgba(250, 233, 207, 0.8);
 }
 
 
@@ -170,6 +181,11 @@
 .expandedFolderBackground-2sPsd- {
     background-color: rgba(131,193,204,0.2);
 }
+	
+/*folder colour hover colour*/
+.folder-21wGz3.hover-2ji_A7 {
+    background-color:rgba(0, 33, 106, 0.6);
+}	
 	
 
 /*custom status on friends view*/
@@ -252,15 +268,15 @@ background-color: rgba(0,0,0,0.7);
 
 
 
-
-
-
 /*message background shadow*/
 .containerCozyBounded-1rKFAn {
     background: rgba(0, 0, 0, 0.2); /* message background color/transparency */
     margin: 5px 20px; /* space between each message */
     border-radius: 5px; /* message roundness */
 }
+
+
+
 /*bg image is the discord shadow at beginning of conversation, color is line at beginning of conversation*/
 .theme-dark .base-34jWEe {
 	color: rgba(0,0,0,0) ;
@@ -291,10 +307,13 @@ border-radius: 8px ;
 }
 
 
-
 /*move server add/create in line*/
 .scroller-2TZvBN>div:nth-last-child(-n+2) {
 	margin-left: 0px ;
 }
 
+/*server online list name outline*/ 
 
+.layout-2DM8Md {
+	background-color: rgba(0,0,0,0.3);
+}
