--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -1854,3 +1854,19 @@ body>div:last-of-type {
     border-left: 4px solid var(--main-color);
     background: rgba(255,255,255,0.04);
 }
+
+.theme-dark .uploadModal-2ifh8j {
+    background-color: var(--main-transparency);
+}
+
+.uploadModal-2ifh8j .inner-3nWsbo .channelTextAreaUpload-3t7EIx .inner-zqa7da {
+	background-color: rgba(255,255,255,0.05);
+}
+
+.theme-dark .uploadModal-2ifh8j {
+    box-shadow: 0 0 0 1px var(--main-color);
+}
+
+.theme-dark .footer-3mqk7D {
+    box-shadow: inset 0 1px 0 var(--main-color);
+}
