--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1849,3 +1849,7 @@ body>div:last-of-type {
 .scrollableContainer-38zsVD {
     background-color: rgba(0,0,0,0.6);
 }
+
+.scrollableContainer-2NUZem {
+    background-color: rgba(0,0,0,0.6);
+}
