--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -1878,3 +1878,7 @@ body>div:last-of-type {
 .scrollableContainer-38zsVD {
     background-color: rgba(0,0,0,0.6);
 }
+
+.scrollableContainer-2NUZem {
+    background-color: rgba(0,0,0,0.6);
+}
