--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1884,3 +1884,7 @@ body>div:last-of-type {
 .scrollableContainer-38zsVD {
     background-color: rgba(0,0,0,0.6);
 }
+
+.scrollableContainer-2NUZem {
+    background-color: rgba(0,0,0,0.6);
+}
