--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1888,3 +1888,7 @@ body>div:last-of-type {
 .scrollableContainer-2NUZem {
     background-color: rgba(0,0,0,0.6);
 }
+
+.container-3Mxszk {
+	background-color: var(--main-transparency);
+}
