library settings transparency

--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1920,3 +1920,7 @@ body>div:last-of-type {
 .scroller-9moviB {
     background-color: transparent;
 }
+
+.scroller-2XE8rp {
+    background-color: transparent;
+}
