--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1885,3 +1885,7 @@ body>div:last-of-type {
 .scroller-9moviB {
     background-color: transparent;
 }
+
+.scroller-2XE8rp {
+    background-color: transparent;
+}
