--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1889,3 +1889,23 @@ body>div:last-of-type {
 .scroller-2XE8rp {
     background-color: transparent;
 }
+
+.channelTextArea-rNsIhG {
+    background-color: transparent;
+}
+
+.wrapper-2aW0bm {
+	background-color: rgba(0,0,0,0.4);
+}
+
+.contextMenu-HLZMGh {
+	background-color: rgba(0,0,0,0.97);
+}
+
+.form-2fGMdU:before {
+	background: none;
+}
+
+.content-1o0f9g {
+	background: none;
+}
