--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1947,5 +1947,5 @@ body>div:last-of-type {
 }
 
 .tutorialContainer-1v44GL .listItem-2P_4kh .listItemWrapper-3X98Pc .wrapper-25eVIn svg {
-    visibility: hidden;
+    opacity: 0;
 }
