--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1949,3 +1949,11 @@ body>div:last-of-type {
 .tutorialContainer-1v44GL .listItem-2P_4kh .listItemWrapper-3X98Pc .wrapper-25eVIn svg {
     opacity: 0;
 }
+
+.expandedFolderBackground-2sPsd- {
+    left: 12px;
+}
+
+.tutorialContainer-1v44GL .listItem-2P_4kh {
+    right: 6px;
+}
