actually fix guilds

--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1957,3 +1957,9 @@ body>div:last-of-type {
 .tutorialContainer-1v44GL .listItem-2P_4kh {
     right: 6px;
 }
+
+.wrapper-1Rf91z .scroller-2TZvBN > div[role="tree"] {
+    display: flex;
+    flex-direction: column;
+    flex-flow: row wrap;
+}
