--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -1997,3 +1997,7 @@ body>div:last-of-type {
     flex-direction: column;
     flex-flow: row wrap;
 }
+
+.wrapper-KXM2i0 {
+    background-color: transparent;
+}
