--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -1991,3 +1991,7 @@ body>div:last-of-type {
     flex-direction: column;
     flex-flow: row wrap;
 }
+
+.wrapper-KXM2i0 {
+    background-color: transparent;
+}
