--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1963,3 +1963,7 @@ body>div:last-of-type {
     flex-direction: column;
     flex-flow: row wrap;
 }
+
+.wrapper-KXM2i0 {
+    background-color: transparent;
+}
