fix call header background

--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -2002,3 +2002,7 @@ body>div:last-of-type {
 .wrapper-KXM2i0 {
     background-color: transparent;
 }
+
+.wrapper-2qzCYF {
+    background-color: transparent;
+}
