--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1967,3 +1967,7 @@ body>div:last-of-type {
 .wrapper-KXM2i0 {
     background-color: transparent;
 }
+
+.wrapper-2qzCYF {
+    background-color: transparent;
+}
