--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -2001,3 +2001,7 @@ body>div:last-of-type {
 .wrapper-KXM2i0 {
     background-color: transparent;
 }
+
+.wrapper-2qzCYF {
+    background-color: transparent;
+}
