fix calls background

--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -2006,3 +2006,7 @@ body>div:last-of-type {
 .wrapper-2qzCYF {
     background-color: transparent;
 }
+
+.wrapper-2qzCYF.minimum-28Z35l {
+    background-color: transparent
+}
