--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1971,3 +1971,7 @@ body>div:last-of-type {
 .wrapper-2qzCYF {
     background-color: transparent;
 }
+
+.wrapper-2qzCYF.minimum-28Z35l {
+    background-color: transparent
+}
