--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -2005,3 +2005,7 @@ body>div:last-of-type {
 .wrapper-2qzCYF {
     background-color: transparent;
 }
+
+.wrapper-2qzCYF.minimum-28Z35l {
+    background-color: transparent
+}
