--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -2010,3 +2010,11 @@ body>div:last-of-type {
 .wrapper-2qzCYF.minimum-28Z35l {
     background-color: transparent
 }
+
+.styleFixed-sX-yHV {
+    background: rgba(6, 6, 6, 0.9);
+}
+
+.colorDefault-2K3EoJ.focused-3afm-j, .colorDefault-2K3EoJ:hover:not(.hideInteraction-1iHO1O) {
+    background-color: rgb(21, 21, 21);
+}
