--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -2073,3 +2073,8 @@ body>div:last-of-type {
 .container-2XeR5Z {
     background-color: rgba(20,20,20,0.8);
 }
+
+.attachment-33OFj0 {
+    border-color: transparent;
+    background-color: rgba(0,0,0,0.6);
+}
