--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -2078,3 +2078,15 @@ body>div:last-of-type {
     border-color: transparent;
     background-color: rgba(0,0,0,0.6);
 }
+
+.contentWrapper-SvZHNd {
+    background-color: rgba(0,0,0,0.6);
+}
+
+.wrapper-1-Fsb8 {
+    background-color: rgba(0,0,0,0.6);
+}
+
+.wrapper-2Gsate {
+    background-color: transparent;
+}
