--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -2077,3 +2077,15 @@ body>div:last-of-type {
     border-color: transparent;
     background-color: rgba(0,0,0,0.6);
 }
+
+.contentWrapper-SvZHNd {
+    background-color: rgba(0,0,0,0.6);
+}
+
+.wrapper-1-Fsb8 {
+    background-color: rgba(0,0,0,0.6);
+}
+
+.wrapper-2Gsate {
+    background-color: transparent;
+}
