--- a/css/scsl.css
+++ b/css/scsl.css
@@ -2055,3 +2055,20 @@ body>div:last-of-type {
 .wrapper-2Gsate {
     background-color: transparent;
 }
+
+.container-enaOkj {
+    background-color: rgba(0,0,0,0.8);
+}
+
+.header-ykumBX {
+    background-color: rgba(0,0,0,0.4);
+}
+
+.channelHeader-3Gd2xq {
+    background-color: rgba(255,255,255,.07);
+}
+
+.messages-3G3erD {
+    background-color: rgba(255,255,255,0.05);
+    border-radius: 0px;
+}
