--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -2100,3 +2100,7 @@ body>div:last-of-type {
     background-color: rgba(255,255,255,0.05);
     border-radius: 0px;
 }
+
+.theme-dark .form-2fGMdU:before {
+    background: transparent;
+}
