--- a/css/scsl.css
+++ b/css/scsl.css
@@ -2072,3 +2072,7 @@ body>div:last-of-type {
     background-color: rgba(255,255,255,0.05);
     border-radius: 0px;
 }
+
+.theme-dark .form-2fGMdU:before {
+    background: transparent;
+}
