message emoji picker

--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -2105,3 +2105,7 @@ body>div:last-of-type {
 .theme-dark .form-2fGMdU:before {
     background: transparent;
 }
+
+.emojiPicker-3PwZFl {
+    background-color: rgba(0,0,0,0.6);
+}
