--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -2100,3 +2100,7 @@ body>div:last-of-type {
 .theme-dark .form-2fGMdU:before {
     background: transparent;
 }
+
+.emojiPicker-3PwZFl {
+    background-color: rgba(0,0,0,0.6);
+}
