--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -2107,3 +2107,7 @@ body>div:last-of-type {
 .theme-dark .form-2fGMdU:before {
     background: transparent;
 }
+
+.emojiPicker-3PwZFl {
+    background-color: rgba(0,0,0,0.6);
+}
