--- a/css/scsl.css
+++ b/css/scsl.css
@@ -2088,3 +2088,7 @@ body>div:last-of-type {
 .members-1998pB, .members-1998pB>div {
     background-color: transparent;
 }
+
+.tutorialContainer-1v44GL {
+    margin-left: 6px;
+}
