--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -2112,3 +2112,21 @@ body>div:last-of-type {
 .members-1998pB, .members-1998pB>div {
     background-color: transparent;
 }
+
+.searchResultMessage-1fxgXh.hit-1fVM9e {
+    box-shadow: none;
+    background-color: transparent;
+    border: none;
+}
+
+.searchResult-9tQ1uo:before {
+    background-image: none;
+}
+
+.searchResult-9tQ1uo:after {
+    background-image: none;
+}
+
+.channelName-1JRO3C {
+    background: transparent;
+}
