--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -2130,3 +2130,8 @@ padding: 0 !important;
 .channelName-1JRO3C {
     background: transparent;
 }
+
+.theme-dark .wrapperAudio-1jDe0Q {
+    border: none;
+    background-color: rgba(0,0,0,.4);
+}
