channel load fix

--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -2131,3 +2131,11 @@ padding: 0 !important;
     border: none;
     background-color: rgba(0,0,0,.4);
 }
+
+.wrapper-3vR61M {
+    background-color: transparent;
+}
+
+.wrapper-1F5TKx {
+    background-color: transparent;
+}
