--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -2151,3 +2151,7 @@ padding: 0 !important;
 .auto-Ge5KZx::-webkit-scrollbar-track {
     background-color: transparent;
 }
+
+.textarea-2r0oV8:focus {
+    background-color: transparent;
+}
