update emoji picker

--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -2151,3 +2151,11 @@ padding: 0 !important;
 .textarea-2r0oV8:focus {
     background-color: transparent;
 }
+
+.theme-dark .wrapper-1-Fsb8 {
+    background-color: rgba(0,0,0,0.6);
+}
+
+.inspector-S2gM3e {
+    background-color: transparent;
+}
