--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -1952,6 +1952,12 @@ padding: 0 !important;
     flex-flow: row wrap;
 }
 
+.wrapper-1Rf91z .scroller-2TZvBN > div {
+    display: flex;
+    flex-direction: column;
+    flex-flow: row wrap;
+}
+
 .tutorialContainer-1v44GL {
     display: flex;
     justify-content: center;
