--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -2180,3 +2180,7 @@ padding: 0 !important;
 .container-3w7J-x {
     background-color: transparent;
 }
+
+.name-3l27Hl.container-2ax-kl {
+    color: var(--main-color);
+}
