--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -2173,3 +2173,7 @@ padding: 0 !important;
 .container-3w7J-x {
     background-color: transparent;
 }
+
+.name-3l27Hl.container-2ax-kl {
+    color: var(--main-color);
+}
