--- a/css/scsl.css
+++ b/css/scsl.css
@@ -2146,3 +2146,7 @@ padding: 0 !important;
 .container-3w7J-x {
     background-color: transparent;
 }
+
+.name-3l27Hl.container-2ax-kl {
+    color: var(--main-color);
+}
