profile settings background

--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -2197,3 +2197,15 @@ padding: 0 !important;
 .unread-2lAfLh {
     background-color: var(--unread-text-color);
 }
+
+.background-1QDuV2 {
+    background-color: transparent;
+}
+
+.fieldList-21DyL8 {
+    background-color: transparent;
+}
+
+.lookFilled-1Gx00P.colorGrey-2DXtkV {
+    background-color: rgba(255, 255, 255, 0.1);
+}
